--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,14 +10,15 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports:
-  tidyverse,
   magrittr,
   readxl,
   here,
   glue,
   dplyr,
+  plyr,
   readr,
   xml2,
+  rjson,
   EML,
   EMLassemblyline
 Remotes:
