--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(api_list_cruises)
 export(data_coverage)
 export(excel_to_template)
+export(geographic_coordinates)
 export(merge_csv_directory)
 export(project_insert)
 export(read_from_api)
+export(temporal_coverage)
 import(EML)
 import(EMLassemblyline)
 import(dplyr)
