exporting sheet_to_tsv, adding some rlog logging

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(geographic_coordinates)
 export(merge_csv_directory)
 export(project_insert)
 export(read_from_api)
+export(sheet_to_tsv)
 export(temporal_coverage)
 import(EML)
 import(EMLassemblyline)
@@ -14,5 +15,6 @@ import(dplyr)
 import(readr)
 import(readxl)
 import(rjson)
+import(rlog)
 import(xml2)
 importFrom(magrittr,`%>%`)
