--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(api_list_cruises)
 export(data_coverage)
 export(excel_to_template)
 export(geographic_coordinates)
+export(map_locs)
 export(merge_csv_directory)
 export(project_insert)
 export(read_from_api)
@@ -12,9 +13,12 @@ export(temporal_coverage)
 import(EML)
 import(EMLassemblyline)
 import(dplyr)
+import(ggplot2)
+import(maps)
 import(readr)
 import(readxl)
 import(rjson)
 import(rlog)
 import(xml2)
+importFrom(dplyr,bind_rows)
 importFrom(magrittr,`%>%`)
