--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -20,6 +20,8 @@ jobs:
     strategy:
       matrix:
         r-version: ['4.1.2']
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
