adding map_values function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(data_coverage)
 export(excel_to_template)
 export(geographic_coordinates)
 export(map_locs)
+export(map_values)
 export(merge_csv_directory)
 export(project_insert)
 export(read_from_api)
