--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -40,8 +40,11 @@ jobs:
       - name: Increment Version 
         run: |
           VERSION=$(grep "Version:" DESCRIPTION | cut -f2- -d ' ')
-          VERSION_NUM=$(echo $VERSION |  awk -F'[.]' '{print "$2"}')
+          echo $VERSION
+          VERSION_NUM=$(echo $VERSION |  awk -F'[.]' '{print $2}')
+          echo $VERSION_NUM
           NEW_VERSION_NUM=expr $VERSION_NUM + 1
+          echo $NEW_VERSION_NUM
           sed -i -e "s/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g" DESCRIPTION
           git add .
           git commit -m "increment version number"
