--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -37,16 +37,14 @@ jobs:
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
-      - name: Increment Version 
+      - name: Increment Version
+        # For pull requests to main branch only
+        if: contains(github.ref, 'main')
         run: |
           VERSION=$(grep "Version:" DESCRIPTION | cut -f2- -d ' ')
-          echo $VERSION
           VERSION_NUM=$(echo $VERSION |  awk -F'[.]' '{print $2}')
-          echo $VERSION_NUM
           NEW_VERSION_NUM=$(($VERSION_NUM + 1))
-          echo $NEW_VERSION_NUM
           sed -i -e "s/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g" DESCRIPTION
-          cat DESCRIPTION
           git add .
           git commit -m "increment version number"
-          git push origin HEAD:<up-version-number>
+          git push
