--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -39,12 +39,14 @@ jobs:
         shell: Rscript {0}
       - name: Increment Version
         # For pull requests to main branch only
-        if: contains(github.ref, 'main')
+        # if: contains(github.ref, 'main')
         run: |
           VERSION=$(grep "Version:" DESCRIPTION | cut -f2- -d ' ')
           VERSION_NUM=$(echo $VERSION |  awk -F'[.]' '{print $2}')
           NEW_VERSION_NUM=$(($VERSION_NUM + 1))
-          sed -i -e "s/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g" DESCRIPTION
+          #sed -i '' -e "s/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g" DESCRIPTION
+          sed -i 's/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g' DESCRIPTION
+          cat DESCRIPTION
           git add .
           git commit -m "increment version number"
           git push
