--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -44,9 +44,12 @@ jobs:
           VERSION=$(grep "Version:" DESCRIPTION | cut -f2- -d ' ')
           VERSION_NUM=$(echo $VERSION |  awk -F'[.]' '{print $2}')
           NEW_VERSION_NUM=$(($VERSION_NUM + 1))
+          echo $VERSION_NUM
+          echo $NEW_VERSION_NUM
           cat DESCRIPTION
-          #sed -i '' -e "s/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g" DESCRIPTION
-          sed -E 's/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g' DESCRIPTION
+          #sed -i -e 's/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g' DESCRIPTION
+          #sed -i '' 's/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g' DESCRIPTION
+          gsed -i 's/0.$VERSION_NUM.0/0.$NEW_VERSION_NUM.0/g' DESCRIPTION
           cat DESCRIPTION
           ls
           git add .
